--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -1,4 +1,4 @@
-<form>
+<form action="index.php?add" method="POST">
     <div class="title text-center">
         <h1>Ajouter des données</h1>
     </div>
@@ -38,7 +38,7 @@
           Formateur
         </label>
       </div>
-      
+
     <div class="text-right">
         <button type="submit" class="btn btn-primary mt-4">Enregistrer les données</button>
     </div>
