--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -6,41 +6,41 @@
 
     <div class="form-group">
         <label for="exampleInputPrenom">Prénom</label>
-        <input type="text" class="form-control" id="exampleInputPrenom" placeholder="Renseignez votre prénom">
+        <input name="first_name" type="text" class="form-control" id="exampleInputPrenom" placeholder="Renseignez votre prénom">
     </div>
 
     <div class="form-group">
         <label for="exampleInputNom">Nom</label>
-        <input type="text" class="form-control" id="exampleInputNom" placeholder="Renseignez votre Nom">       
+        <input name="last_name" type="text" class="form-control" id="exampleInputNom" placeholder="Renseignez votre Nom">       
     </div>
 
     <div class="form-group">
         <label for="exampleInputAge">Àge (18 à 60 ans)</label>
-        <input min="18" max="60" type="number" class="form-control" id="exampleInputAge" placeholder="Renseignez votre age">
+        <input name="age" min="18" max="60" type="number" class="form-control" id="exampleInputAge" placeholder="Renseignez votre age">
     </div>
 
     <div class="input-group">
         <span class="input-group-text">Taille (entre 1,6 et 2m)</span>
-        <input min="1.60" max="2" step="0.01" type="number" class="form-control">
+        <input name="size" min="1.60" max="2" step="0.01" type="number" class="form-control">
         <span class="input-group-text">M</span>
     </div>
 
     <div class="form-check pt-3">
-        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+        <input name="situation" class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="apprenant" checked>
         <label class="form-check-label" for="exampleRadios1">
           Apprenant
         </label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+        <input name="situation" class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="formateur">
         <label class="form-check-label" for="exampleRadios2">
           Formateur
         </label>
       </div>
 
     <div class="text-right">
-        <button type="submit" class="btn btn-primary mt-4">Enregistrer les données</button>
+        <button name="envoyer" type="submit" class="btn btn-primary mt-4">Enregistrer les données</button>
     </div>
 
   </form>
