--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -1,4 +1,4 @@
-<div class="p-5 bg-light">
+<div class="p-5 bg-light d-none d-sm-block">
     <h1 class="display-4">PHP procédural</h1>
     <hr class="my-4">
         <p>J'apprends et je me perfectionne.</p>
