--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -3,6 +3,7 @@
         <h1>Ajouter des données</h1>
     </div>
     
+    <!-- Composants du formulaire: -->
 
     <div class="form-group">
         <label for="exampleInputPrenom">Prénom</label>
